--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "diff"
 version = "0.1.0"
 authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
+description = "An LCS based slice and string diffing implementation."
+license = "MIT"
 
 [dev-dependencies]
 speculate = "0.0.12"
