chore: relicense to dual MIT/Apache-2.0 and include license files
Fixes #5 and #9.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "diff"
 version = "0.1.9"
 authors = ["Utkarsh Kukreti <utkarshkukreti@gmail.com>"]
 description = "An LCS based slice and string diffing implementation."
-license = "MIT"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/utkarshkukreti/diff.rs"
 repository = "https://github.com/utkarshkukreti/diff.rs"
 
