--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ repository = "https://github.com/utkarshkukreti/diff.rs"
 
 [dev-dependencies]
 speculate = "0.0.24"
-quickcheck = "0.2.16"
+quickcheck = { version = "0.4.1", default-features = false }
