--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ homepage = "https://github.com/utkarshkukreti/diff.rs"
 repository = "https://github.com/utkarshkukreti/diff.rs"
 
 [dev-dependencies]
-speculate = "0.0.25"
-quickcheck = { version = "0.5", default-features = false }
+speculate = "0.1.2"
+quickcheck = "0.9.0"
