--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,5 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - run: cargo clippy
         continue-on-error: true
+      - run: cargo bench
+        if: ${{ matrix.os == 'ubuntu-latest' }}
